--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,18 @@
 {
-  "presets": ["es2015", "react"]
+    "presets": [
+        "es2015",
+        "stage-0",
+        "react"
+    ],
+    "plugins": [
+        "syntax-dynamic-import",
+        "transform-decorators-legacy"
+    ],
+    "env": {
+        "test": {
+            "plugins": [
+            "dynamic-import-node"
+            ]
+        }
+    }
 }
