Updated email information

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "confetti",
     "canvas"
   ],
-  "author": "Christian Micklisch <christian.micklisch@successwithsos.com> (https://github.com/fufu70/)",
+  "author": "Christian Micklisch <christian.micklisch@icloud.com> (https://github.com/fufu70/)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/fufu70/react-confetti-canvas/issues"
